Adjust Map width to show listing (jumping on scroll needs to be fixed)

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -347,7 +347,7 @@ body {
 .Map {
   position: absolute;
   top: 113px;
-  left: 0;
+  left: 350px;
   right: 0;
   bottom: 0;
 }
